Logs/3.94.170.64.log
java(11722): Operation not permitted
java(14792): Operation not permitted
java: no process found
rm -f *.class
javac Client.java
Client.java:52: error: cannot find symbol
            String response = stub.sayHello();
                                  ^
  symbol:   method sayHello()
  location: variable stub of type Hello
1 error
make: *** [Client.class] Error 1
Error: Could not find or load main class Server
